# NemisisFinder

./: .gitignore  CLAUDE.md  FIREBASE_IMPLEMENTATION_PLAN.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IONIC_MIGRATION.md  NEMESIS_THEME_SUMMARY.md  README.md
frontend/: .env.example  .gitignore  QUICKSTART.md  README.md  SETUP.md  THEME.md  package-lock.json  package.json
frontend/src/: styles.scss  theme.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.scss  app.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/models/: questionnaire.model.ts  response.model.ts  user.model.ts
frontend/src/app/core/services/: auth.service.ts  questionnaire.service.ts
frontend/src/app/features/auth/: login.component.ts  register.component.scss  register.component.ts
frontend/src/app/features/profile/: profile.component.ts
frontend/src/app/features/questionnaire/: questionnaire.component.ts
frontend/src/app/shared/components/: navbar.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
rust-matcher/: Cargo.toml
rust-matcher/src/: lib.rs  matching.rs  scoring.rs
